--- a/contact.html
+++ b/contact.html
@@ -56,23 +56,30 @@
                 <a class="nav-link" href="./events.html">الفعاليات</a>
               </li>
               <li class="nav-item ps-5">
-                <a class="nav-link active" href="./contact.html">تواصل معنا</a>
+                <a class="nav-link  active " href="./contact.html">تواصل معنا</a>
               </li>
               <li class="nav-item ps-5">
                 <a class="nav-link" href="./about.html">عنا</a>
               </li>
             </ul>
+            <div class="d-flex justify-content-around align-items-center">
 
-
-              <button id="toggleBtn" class=" py-auto py-auto me-3 border border-0 lang-btn lang-btn">
+              <button id="toggleBtn" class="py-auto me-3 border border-0 lang-btn lang-btn">
                 <img src="./assets/img/EN.webp" alt="EN" style="max-height: 2rem;">
               </button>
 
+              <div class="form-check form-switch me-3 ">
+                <input class="form-check-input" type="checkbox" id="theme-toggle" style="transform: scale(1.5);">
+                <label class="form-check-label" for="theme-toggle">
+                  <i class="fas fa-sun"></i>
+                </label>
+              </div>
+            </div>
 
-              <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-                <i class="fas fa-sun"></i>
-              </button>
           </div>
+
+
+
         </div>
       </nav>
     </header>
@@ -288,23 +295,24 @@
                 <a class="nav-link" href="./events.html">Events</a>
               </li>
               <li class="nav-item pe-5">
-                <a class="nav-link active" href="./contact.html">Contact Us</a>
+                <a class="nav-link  active " href="./contact.html">Contact Us</a>
               </li>
               <li class="nav-item pe-5">
                 <a class="nav-link" href="./about.html">About</a>
               </li>
             </ul>
+            <div class="d-flex justify-content-around align-items-center">
+              <button id="toggleBtn" class="py-auto border border-0 lang-btn px-3">
+                <img src="./assets/img/AR.webp" alt="AR" style="max-height: 2rem;">
+              </button>
+              <div class="form-check form-switch ">
+                <input class="form-check-input" type="checkbox" id="theme-toggleEN" style="transform: scale(1.5);">
+                <label class="form-check-label" for="theme-toggleEN">
+                  <i class="fas fa-sun"></i>
+                </label>
+              </div>
+            </div>
           </div>
-          <button id="theme-toggle" class="btn btn-outline-secondary me-auto">
-            <i class="fas fa-sun"></i>
-          </button>
-
-
-
-          <button id="toggleBtn" class="py-auto me-3 border border-0 lang-btn">
-            <img src="./assets/img/AR.webp" alt="AR" style="max-height: 2rem;">
-          </button>
-
         </div>
       </nav>
     </header>
