--- a/events.html
+++ b/events.html
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png" />
   <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
-  <link rel="stylesheet" href="./assets/Css/index.css" />
+  <link rel="stylesheet" href="./assets/css/" />
   <link rel="stylesheet" href="./assets/Css/darkMode.css" />
   <link rel="stylesheet" href="./assets/Css/events.css" />
 
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item ps-5">
-                <a class="nav-link" aria-current="page" href="./index.html">الرئيسية</a>
+                <a class="nav-link " aria-current="page" href="./index.html">الرئيسية</a>
               </li>
               <li class="nav-item ps-5">
                 <a class="nav-link active" href="./events.html">الفعاليات</a>
@@ -62,14 +62,24 @@
                 <a class="nav-link" href="./about.html">عنا</a>
               </li>
             </ul>
-          <button id="toggleBtn" class=" py-auto py-auto me-3 border border-0 lang-btn lang-btn">
-            <img src="./assets/img/EN.webp" alt="EN" style="max-height: 2rem;">
-          </button>
+            <div class="d-flex justify-content-around align-items-center">
 
-            <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-              <i class="fas fa-sun"></i>
-            </button>
+              <button id="toggleBtn" class="py-auto me-3 border border-0 lang-btn lang-btn">
+                <img src="./assets/img/EN.webp" alt="EN" style="max-height: 2rem;">
+              </button>
+
+              <div class="form-check form-switch me-3 ">
+                <input class="form-check-input" type="checkbox" id="theme-toggle" style="transform: scale(1.5);">
+                <label class="form-check-label" for="theme-toggle">
+                  <i class="fas fa-sun"></i>
+                </label>
+              </div>
+            </div>
+
           </div>
+
+
+
         </div>
       </nav>
     </header>
@@ -242,12 +252,12 @@
         <div class="container-fluid">
           <a class="logo ms-3" href="./index.html">Your Events</a>
 
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item pe-5">
@@ -263,12 +273,17 @@
                 <a class="nav-link" href="./about.html">About</a>
               </li>
             </ul>
-            <button id="toggleBtn" class="py-auto me-3 border border-0 lang-btn">
-              <img src="./assets/img/AR.webp" alt="AR" style="max-height: 2rem;">
-            </button>
-            <button id="theme-toggle" class="btn btn-outline-secondary ms-3">
-              <i class="fas fa-sun"></i>
-            </button>
+            <div class="d-flex justify-content-around align-items-center">
+              <button id="toggleBtn" class="py-auto border border-0 lang-btn px-3">
+                <img src="./assets/img/AR.webp" alt="AR" style="max-height: 2rem;">
+              </button>
+              <div class="form-check form-switch ">
+                <input class="form-check-input" type="checkbox" id="theme-toggleEN" style="transform: scale(1.5);">
+                <label class="form-check-label" for="theme-toggleEN">
+                  <i class="fas fa-sun"></i>
+                </label>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
