--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/wesam.jpg" alt="" />
               <h3>وسام محمد</h3>
-              <span class="title">wessam_237869</span>
+              <span class="title">wessam_237869   C8</span>
               <p>
                 قام بتصميم الصفحة الرئيسية وصفحة التواصل معنا بما يشمل الدارك مود
                 الخاص بهما واللغتين العربية والانكليزية
@@ -156,7 +156,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/abdullah.jpg" alt="" />
               <h3>عبدالله </h3>
-              <span class="title">abdullah_285176</span>
+              <span class="title">abdullah_285176   C2</span>
 
               <p>
                 قام بانجاز قسم عنا وتجميع المحتوى العام للموقع المحترم بما يتضمن صور ومعلومات مفيدة
@@ -165,7 +165,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/fouad.jpg" alt="" />
               <h3>فؤاد</h3>
-              <span class="title">fouad_235163</span>
+              <span class="title">fouad_235163    C8</span>
 
               <p>
                 قام بإنجاز قسم الفعاليات وقسم التفاصيل بما يشمل الدارك مود الخاص بهما واللغتين العربية والانكليزية
@@ -416,7 +416,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/wesam.jpg" alt="" />
               <h3>wessam Mohammed</h3>
-              <span class="title">wessam_237869</span>
+              <span class="title">wessam_237869   C8</span>
               <p>
                 Designed the homepage and contact us page, including their dark mode, both Arabic and English languages,
                 and their appropriate design.
@@ -426,7 +426,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/abdullah.jpg" alt="" />
               <h3>Abdullah</h3>
-              <span class="title">abdullah_285176</span>
+              <span class="title">abdullah_285176   C2</span>
               <p>
                 Completed the About Us section and general content collection for the esteemed website, including useful
                 images and information.
@@ -435,7 +435,7 @@
             <div class="box">
               <img decoding="async" src="./assets/img/about/fouad.jpg" alt="" />
               <h3>Fouad</h3>
-              <span class="title">fouad_235163</span>
+              <span class="title">fouad_235163    C8</span>
               <p>
                 Implement the Events section and the Details section, including their dark mode, both Arabic and English
                 language support, and their appropriate design. </p>
