--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <div class="col-md-8 text-center">
               <div class="d-flex flex-wrap justify-content-center gap-3 mb-2">
                 <h5 class="mb-2">فريق فعالياتك</h5>
-                <span class="badge name-tag p-2">fouad_235163</span>
-                <span class="badge name-tag p-2">abdullah_285176</span>
-                <span class="badge name-tag p-2">wessam_237869</span>
+                <span class="badge name-tag p-2">fouad_235163   C8</span>
+                <span class="badge name-tag p-2">abdullah_285176    C2</span>
+                <span class="badge name-tag p-2">wessam_237869    C8</span>
                 <a href="./about.html#testimonials" class="btn btn-sm btn-outline-primary">
                   تعرف على الفريق <i class="fas fa-arrow-left ms-1"></i>
                 </a>
@@ -472,9 +472,9 @@
             <div class="col-md-8 text-center">
               <div class="d-flex flex-wrap justify-content-center gap-3 mb-2">
                 <h5 class="mb-2">The Team</h5>
-                <span class="badge name-tag p-2">fouad_235163</span>
-                <span class="badge name-tag p-2">abdullah_285176</span>
-                <span class="badge name-tag p-2">wessam_237869</span>
+                <span class="badge name-tag p-2">fouad_235163   C8</span>
+                <span class="badge name-tag p-2">abdullah_285176    C2</span>
+                <span class="badge name-tag p-2">wessam_237869    C8</span>
                 <a href="./about.html#testimonials" class="btn btn-sm btn-outline-primary">
                   learn more about the team<i class="fas fa-arrow-right ms-1"></i>
                 </a>
